// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when an error is present matches the snapshot 1`] = `
<section>
  <PageHeader
    buttons={
      Array [
        <ForwardRef
          to="/c/defaultc/ns/default/catalog"
        >
          <CdsButton
            status="primary"
          >
            <CdsIcon
              inverse={true}
              shape="deploy"
            />
             Deploy
          </CdsButton>
        </ForwardRef>,
      ]
    }
    filter={
      <SearchFilter
        onChange={[Function]}
        onSubmit={[MockFunction]}
        placeholder="search apps..."
        value=""
      />
    }
    title="Applications"
  />
  <LoadingWrapper
    loaded={true}
  >
    <Alert
      app={false}
      compact={false}
      theme="danger"
    >
      Unable to list apps: 
      Boom!
    </Alert>
  </LoadingWrapper>
</section>
`;

exports[`when an error is present renders a generic error message 1`] = `
<section>
  <PageHeader
    buttons={
      Array [
        <ForwardRef
          to="/c/defaultc/ns/default/catalog"
        >
          <CdsButton
            status="primary"
          >
            <CdsIcon
              inverse={true}
              shape="deploy"
            />
             Deploy
          </CdsButton>
        </ForwardRef>,
      ]
    }
    filter={
      <SearchFilter
        onChange={[Function]}
        onSubmit={[MockFunction]}
        placeholder="search apps..."
        value=""
      />
    }
    title="Applications"
  />
  <LoadingWrapper
    loaded={true}
  >
    <Alert
      app={false}
      compact={false}
      theme="danger"
    >
      Unable to list apps: 
      Boom!
    </Alert>
  </LoadingWrapper>
</section>
`;

exports[`when apps available matches the snapshot 1`] = `
<section>
  <PageHeader
    buttons={
      Array [
        <ForwardRef
          to="/c/defaultc/ns/default/catalog"
        >
          <CdsButton
            status="primary"
          >
            <CdsIcon
              inverse={true}
              shape="deploy"
            />
             Deploy
          </CdsButton>
        </ForwardRef>,
      ]
    }
    filter={
      <SearchFilter
        onChange={[Function]}
        onSubmit={[MockFunction]}
        placeholder="search apps..."
        value=""
      />
    }
    title="Applications"
  />
  <LoadingWrapper
    loaded={true}
  >
    <AppListGrid
      appList={
        Array [
          Object {
            "chartMetadata": Object {
              "appVersion": "0.1.0",
              "name": "bar",
              "version": "1.0.0",
            },
            "releaseName": "foo",
            "status": "deployed",
          },
        ]
      }
      appVersion="v1.0.0"
      cluster="defaultc"
      csvs={Array []}
      customResources={Array []}
      filter=""
      namespace="default"
    />
  </LoadingWrapper>
</section>
`;

exports[`when custom resources available matches the snapshot 1`] = `
<section>
  <PageHeader
    buttons={
      Array [
        <ForwardRef
          to="/c/defaultc/ns/default/catalog"
        >
          <CdsButton
            status="primary"
          >
            <CdsIcon
              inverse={true}
              shape="deploy"
            />
             Deploy
          </CdsButton>
        </ForwardRef>,
      ]
    }
    filter={
      <SearchFilter
        onChange={[Function]}
        onSubmit={[MockFunction]}
        placeholder="search apps..."
        value=""
      />
    }
    title="Applications"
  />
  <LoadingWrapper
    loaded={true}
  >
    <AppListGrid
      appVersion="v1.0.0"
      cluster="defaultc"
      csvs={
        Array [
          Object {
            "metadata": Object {
              "name": "foo",
            },
            "spec": Object {
              "customresourcedefinitions": Object {
                "owned": Array [
                  Object {
                    "kind": "KubeappsCluster",
                  },
                ],
              },
            },
          },
        ]
      }
      customResources={
        Array [
          Object {
            "kind": "KubeappsCluster",
            "metadata": Object {
              "name": "foo-cluster",
            },
          },
        ]
      }
      filter=""
      namespace="default"
    />
  </LoadingWrapper>
</section>
`;

exports[`when fetched but not apps available matches the snapshot 1`] = `
<section>
  <PageHeader
    buttons={
      Array [
        <ForwardRef
          to="/c/defaultc/ns/default/catalog"
        >
          <CdsButton
            status="primary"
          >
            <CdsIcon
              inverse={true}
              shape="deploy"
            />
             Deploy
          </CdsButton>
        </ForwardRef>,
      ]
    }
    filter={
      <SearchFilter
        onChange={[Function]}
        onSubmit={[MockFunction]}
        placeholder="search apps..."
        value=""
      />
    }
    title="Applications"
  />
  <LoadingWrapper
    loaded={true}
  >
    <AppListGrid
      appList={Array []}
      appVersion="v1.0.0"
      cluster="defaultc"
      csvs={Array []}
      customResources={Array []}
      filter=""
      namespace="default"
    />
  </LoadingWrapper>
</section>
`;

exports[`while fetching apps loading spinner matches the snapshot 1`] = `
<section>
  <PageHeader
    buttons={
      Array [
        <ForwardRef
          to="/c/defaultc/ns/default/catalog"
        >
          <CdsButton
            status="primary"
          >
            <CdsIcon
              inverse={true}
              shape="deploy"
            />
             Deploy
          </CdsButton>
        </ForwardRef>,
      ]
    }
    filter={
      <SearchFilter
        onChange={[Function]}
        onSubmit={[MockFunction]}
        placeholder="search apps..."
        value=""
      />
    }
    title="Applications"
  />
  <LoadingWrapper
    loaded={false}
  >
    <AppListGrid
      appVersion="v1.0.0"
      cluster="defaultc"
      csvs={Array []}
      customResources={Array []}
      filter=""
      namespace="default"
    />
  </LoadingWrapper>
</section>
`;

exports[`while fetching apps loading spinner matches the snapshot 2`] = `
<section>
  <PageHeader
    buttons={
      Array [
        <ForwardRef
          to="/c/defaultc/ns/default/catalog"
        >
          <CdsButton
            status="primary"
          >
            <CdsIcon
              inverse={true}
              shape="deploy"
            />
             Deploy
          </CdsButton>
        </ForwardRef>,
      ]
    }
    filter={
      <SearchFilter
        onChange={[Function]}
        onSubmit={[MockFunction]}
        placeholder="search apps..."
        value=""
      />
    }
    title="Applications"
  />
  <LoadingWrapper
    loaded={false}
  >
    <AppListGrid
      appVersion="v1.0.0"
      cluster="defaultc"
      csvs={Array []}
      customResources={Array []}
      filter=""
      namespace="default"
    />
  </LoadingWrapper>
</section>
`;
